# lsst-extendedness

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
antares-level2/: antares_extendedness_filter_.py  config_example.py
config/: config_example.py  default.toml  kafka_config.json  kafka_profiles.toml  logging_config.yaml
docs/: contributing.md  index.md
docs/api/: filter.md  models.md  processing.md  sources.md  storage.md
docs/deployment/: openstack.md  systemd.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: filtering.md  ingestion.md  processing.md  querying.md
scripts/: bootstrap.sh  download_fink_fixtures.py  generate_report.py  setup-system.sh  setup_environment.sh  test_kafka_connection.py  validate_cutouts.py
src/: __init__.py  antares_extendedness_filter.py  lsst_alert_consumer.py
src/lsst_extendedness/: __init__.py  cli.py
src/lsst_extendedness/config/: __init__.py  settings.py
src/lsst_extendedness/cutouts/: __init__.py  processor.py
src/lsst_extendedness/filter/: __init__.py  engine.py  presets.py
src/lsst_extendedness/ingest/: __init__.py  deserializer.py  pipeline.py  state.py
src/lsst_extendedness/models/: __init__.py  alerts.py  runs.py
src/lsst_extendedness/processing/: __init__.py  base.py  registry.py  runner.py
src/lsst_extendedness/processing/builtin/: __init__.py  example.py
src/lsst_extendedness/query/: __init__.py  export.py  shortcuts.py
src/lsst_extendedness/sources/: __init__.py  antares.py  file.py  fink.py  kafka.py  mock.py  protocol.py  spacerocks.py
src/lsst_extendedness/storage/: __init__.py  protocol.py  schema.py  sqlite.py
src/lsst_extendedness/utils/: __init__.py  logging.py  time.py
src/utils/: __init__.py  csv_writer.py  cutout_processor.py  kafka_helpers.py
systemd/: lsst-ingest.service  lsst-ingest.timer  lsst-process.service  lsst-process.timer
tests/: __init__.py  conftest.py  test_antares_source.py  test_builtin_processors.py  test_config.py  test_consumer.py  test_csv_writing.py  test_cutout_extraction.py  test_cutouts.py  test_deserializer.py  test_export.py  test_filter.py  test_fink_source.py  test_ingest.py  test_models.py  test_processing.py  test_query.py  test_quickstart_docs.py  test_sources.py  test_spacerocks_source.py  test_storage.py  test_utils.py
tests/fixtures/: __init__.py  avro_samples.py  factories.py
tests/fixtures/fink/: metadata.json  objects.json  sso.json
